Pagina sencilla con grafo de tareas

--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-<<<<<<< HEAD
-=======
     "axios": "^0.19.0",
->>>>>>> 15f380eb34d9b142d7c57b2ba1c9cdf779b2beb1
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-digraph": "^6.5.0",
+    "react-dom": "^16.11.0",
     "react-redux": "^6.0.1",
     "react-router": "^3.2.5",
     "react-router-dom": "^4.3.1",
