--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "core-js": "3",
+    "kleur": "3",
     "react": "^16.8.4",
     "react-digraph": "^6.5.0",
     "react-dom": "^16.11.0",
