--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.4",
     "react-digraph": "^6.5.0",
     "react-dom": "^16.11.0",
+    "react-intl-universal": "^2.2.1",
     "react-redux": "^6.0.1",
     "react-router": "^3.2.5",
     "react-router-dom": "^5.1.2",
